--- a/site/v1/package.json
+++ b/site/v1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fire-app",
+  "name": "dalyverse-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "cecois <cecmcgee@gmail.com>",
@@ -14,14 +14,13 @@
     "buefy": "^0.6.6",
     "dotenv": "^6.0.0",
     "dotenv-webpack": "^1.5.7",
-    "firebase": "^5.0.4",
     "levenshtein-dist": "^0.1.1",
     "moment": "^2.22.2",
     "nouislider": "^12.1.0",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.2",
-    "vue-firestore": "^0.2.9",
     "vue-form-wizard": "^0.8.4",
+    "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
     "vue-simple-suggest": "^1.8.0",
     "vue-underscore": "^0.1.4"
