slider wired to events refresh

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,5 +1,4 @@
-DEFAULTSET=atl
-MODE=T
-ARANGOIP=localhost
+MODE=O
+ARANGOIP=155.34.170.88
 FILTER_TIME_BEGIN=1977-07-07
 FILTER_TIME_END=1988-08-08
