prep for getGeoms rewrite

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,4 +1,4 @@
-MODE=O
-ARANGOIP=155.34.170.88
-FILTER_TIME_BEGIN=1977-07-07
-FILTER_TIME_END=1988-08-08
+MODE=T
+ARANGOIP=localhost
+FILTER_TIME_BEGIN=1951-01-01
+FILTER_TIME_END=1959-09-09
