--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,4 +1,5 @@
 MODE=T
-ARANGOIP=localhost
-FILTER_TIME_BEGIN=1951-01-01
-FILTER_TIME_END=1959-09-09
+VERBOSITY=DEBUG
+ARANGOIP=155.34.170.88
+FILTER_TIME_BEGIN=1970-01-01
+FILTER_TIME_END=1972-12-31
