some history and console style

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,5 +1,7 @@
-MODE=T
+MODE=33
 VERBOSITY=DEBUG
-ARANGOIP=155.34.170.88
-FILTER_TIME_BEGIN=1970-01-01
-FILTER_TIME_END=1972-12-31
+ARANGOIP=10.0.0.150
+LINE_TIME_BEGIN=1970-01-01
+LINE_TIME_END=1977-12-31
+SLIDER_TIME_BEGIN=1960
+SLIDER_TIME_END=1970
