reduced handoff of full feature obj

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
 MODE=T
 VERBOSITY=DEBUG
-ARANGOIP=localhost
+ARANGOIP=155.34.170.88
 LINE_TIME_BEGIN=1970-01-01
 LINE_TIME_END=1975-12-31
 SLIDER_TIME_BEGIN=1971
