double styling but otherwise geo===aok

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,7 +1,7 @@
-MODE=33
+MODE=T
 VERBOSITY=DEBUG
-ARANGOIP=10.0.0.150
-LINE_TIME_BEGIN=1970-01-01
-LINE_TIME_END=1975-12-31
-SLIDER_TIME_BEGIN=1971
-SLIDER_TIME_END=1974
+ARANGOIP=localhost
+LINE_TIME_BEGIN=1975-01-01
+LINE_TIME_END=1981-12-31
+SLIDER_TIME_BEGIN=1976
+SLIDER_TIME_END=1980
