workin on bulma sass

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,7 +1,7 @@
 MODE=T
 VERBOSITY=DEBUG
-ARANGOIP=localhost
+ARANGOIP=155.34.170.88
 LINE_TIME_BEGIN=1975-01-01
 LINE_TIME_END=1981-12-31
-SLIDER_TIME_BEGIN=1976
-SLIDER_TIME_END=1980
+SLIDER_RANGE_BEGIN=1966-01-01
+SLIDER_RANGE_END=1990-12-31
