--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
-MODE=T
+MODE=L
 VERBOSITY=DEBUG
-ARANGOIP=10.0.0.150
+ARANGOIP=155.34.170.88
 LINE_TIME_BEGIN=1975-01-01
 LINE_TIME_END=1981-12-31
 SLIDER_RANGE_BEGIN=1966-01-01
