--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,7 +1,7 @@
-MODE=L
+MODE=33
 VERBOSITY=DEBUG
-ARANGOIP=155.34.170.88
-LINE_TIME_BEGIN=1975-01-01
-LINE_TIME_END=1981-12-31
+ARANGOIP=10.0.0.150
+LINE_TIME_BEGIN=1970-01-01
+LINE_TIME_END=1977-12-31
 SLIDER_RANGE_BEGIN=1966-01-01
 SLIDER_RANGE_END=1990-12-31
