--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
-MODE=T
+MODE=L
 VERBOSITY=DEBUG
-ARANGOIP=localhost
+ARANGOIP=155.34.170.88
 LINE_TIME_BEGIN=1970-02-20
 LINE_TIME_END=1970-03-01
 SLIDER_RANGE_BEGIN=1920-01-01
