--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
-MODE=L
+MODE=33
 VERBOSITY=DEBUG
-ARANGOIP=155.34.170.88
+ARANGOIP=10.0.0.150
 LINE_TIME_BEGIN=1970-02-20
 LINE_TIME_END=1970-03-01
 SLIDER_RANGE_BEGIN=1920-01-01
