--- a/site/v1/package.json
+++ b/site/v1/package.json
@@ -16,7 +16,6 @@
         "eslint-friendly-formatter": "^4.0.1",
         "levenshtein-dist": "^0.1.1",
         "moment": "^2.22.2",
-        "nouislider": "^12.1.0",
         "v-tooltip": "^2.0.0-rc.33",
         "vue": "^2.5.2",
         "vue-form-wizard": "^0.8.4",
@@ -50,8 +49,11 @@
         "ora": "^1.2.0",
         "portfinder": "^1.0.13",
         "postcss-import": "^11.0.0",
+        "postcss-load-options": "^1.2.0",
+        "postcss-load-plugins": "^2.3.0",
         "postcss-loader": "^2.0.8",
         "postcss-url": "^7.2.1",
+        "remove-trailing-separator": "^1.1.0",
         "rimraf": "^2.6.0",
         "sass-loader": "^7.1.0",
         "semver": "^5.3.0",
