--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
-MODE=T
+MODE=33
 VERBOSITY=DEBUG
-ARANGOIP=10.0.0.150
+ARANGOIP=localhost
 ARANGOPORT=8529
 ARANGOCURSOR="/_api/cursor"
 LINE_TIME_BEGIN=1970-02-20
