--- a/site/v1/package.json
+++ b/site/v1/package.json
@@ -14,8 +14,10 @@
         "dotenv": "^6.0.0",
         "dotenv-webpack": "^1.5.7",
         "eslint-friendly-formatter": "^4.0.1",
+        "json-parse-better-errors": "^1.0.2",
         "levenshtein-dist": "^0.1.1",
         "moment": "^2.22.2",
+        "nouislider": "^14.0.2",
         "v-tooltip": "^2.0.0-rc.33",
         "vue": "^2.5.2",
         "vue-form-wizard": "^0.8.4",
