--- a/site/v1/package.json
+++ b/site/v1/package.json
@@ -18,6 +18,8 @@
         "levenshtein-dist": "^0.1.1",
         "moment": "^2.22.2",
         "nouislider": "^14.0.2",
+        "simplebar": "^4.1.0",
+        "simplebar-vue": "^1.1.0",
         "v-tooltip": "^2.0.0-rc.33",
         "vue": "^2.5.2",
         "vue-form-wizard": "^0.8.4",
