--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
 MODE=T
 VERBOSITY=DEBUG
-ARANGOIP=localhost
+ARANGOIP=10.0.0.150
 ARANGOPORT=8529
 ARANGOCURSOR="/_api/cursor"
 LINE_TIME_BEGIN=1967-06-08
