--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,8 +1,10 @@
-MODE=33
+MODE=T
 VERBOSITY=DEBUG
 ARANGOIP=134.209.213.83
 ARANGOPORT=8529
 ARANGOCURSOR="/_api/cursor"
+ARANGOUSER="ccmiller"
+ARANGOPSSW="rang0"
 LINE_TIME_BEGIN=1967-06-08
 LINE_TIME_END=1975-03-01
 SLIDER_RANGE_BEGIN=1920-01-01
