--- a/site/v1/package.json
+++ b/site/v1/package.json
@@ -26,6 +26,7 @@
         "vue-headful": "^2.0.1",
         "vue-router": "^3.0.1",
         "vue-simple-suggest": "^1.8.0",
+        "vue-top-progress": "^0.7.0",
         "vue-underscore": "^0.1.4"
     },
     "devDependencies": {
