geoms api uri fix;built

--- a/site/v1/.env
+++ b/site/v1/.env
@@ -1,6 +1,6 @@
 MODE=33
 VERBOSITY=DEBUG
-API_ROOT=http://localhost:3030
+API_ROOT=http://milleria.org:3030
 ARANGOIP=arango.wompupthejams.com
 ARANGOPORT=8529
 ARANGOCURSOR="/_api/cursor"
