--- a/site/v2/package.json
+++ b/site/v2/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "luxon": "^3.4.4",
     "sass": "^1.55.0",
+    "timeline-vuejs": "^1.1.7",
     "vite": "^3.1.9",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-echarts": "^6.6.8"
